# AlgorithmforDP

./: .env.example  .gitignore  .vercelignore  CMakeLists.txt  README.md  USAGE_1.0.4.md  build.bat  index-DkPv5cq8.js  index-SfH3h9uj.css  index.html  lcs_scs.wasm  package-lock.json  package.json  vercel.json  vite.config.js
api/: chat.js
docs/: USAGE_1.0.3.md  USAGE_1.0.4.md  USAGE_1.1.3.md  csdn_blog.md
docs/references/: README.md
launcher/: open_dist.cpp
public/: lcs_scs.wasm
scripts/: build-wasm.ps1  package-local.mjs  package-vercel.ps1
wasm/: lcs_scs_wasm.cpp
web-src/: App.jsx  styles.css
web-src/components/: AIChatBot.jsx  AppFooter.jsx  Charts.jsx  DpVisualizer.jsx  MetricCard.jsx  Navbar.jsx  SequenceTokens.jsx
web-src/config/: chatModes.js  explanationTopics.js  presets.js  tabs.js  visualState.js
web-src/data/: references.js
web-src/features/control/: ControlPanel.jsx
web-src/features/core/: CoreResultsView.jsx
web-src/features/docs/: AlgorithmDocsView.jsx
web-src/features/longText/: LongTextDialog.jsx
web-src/features/performance/: PerformanceView.jsx
web-src/features/references/: ReferenceReaderPage.jsx  ReferencesView.jsx
web-src/features/visual/: StandaloneVisualPage.jsx
web-src/hooks/: useVisualizerState.js
web-src/lib/: fileCodec.js  randomText.js  wasmClient.js
web-src/services/: chatApi.js
web-src/utils/: buildReferenceContext.js  buildWorkspaceContext.js  getInitialTab.js  getRouteReferenceId.js  getRouteView.js  readVisualState.js  storeVisualState.js
